<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview">Overview:</string>
    <string name="genres">Genres:</string>
    <string name="release_date">Release Date:</string>
    <string name="budget">Budget:</string>
    <string name="runtime">Runtime:</string>
    <string name="status">Status:</string>
    <string name="detail_deeplink" translatable="false">app://movieDetail/{movieID}</string>
    <string name="title">Title</string>
</resources>