<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.MovieDetailFragment"
    android:fillViewport="true"
    android:background="@color/design_default_color_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/movieImageDetail"
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:src="@drawable/ic_default_image"/>

            <ImageView
                android:id="@+id/selectDetail"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end|top"
                android:translationZ="1dp"
                android:background="@drawable/bg_select_movie" />

        </FrameLayout>

        <TextView
            android:id="@+id/movieTitleDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frameLayout"/>

        <TextView
            android:id="@+id/overviewDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieTitleDetail"/>

        <TextView
            android:id="@+id/genresTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/chipGroup"
            app:layout_constraintBottom_toBottomOf="@id/chipGroup" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:chipSpacing="2dp"
            app:singleSelection="false"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/genresTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overviewDet"/>

        <TextView
            android:id="@+id/movieReleaseDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroup"/>

        <TextView
            android:id="@+id/movieBudgetDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/budget"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieReleaseDetail"/>

        <TextView
            android:id="@+id/movieRuntimeDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/runtime"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieBudgetDetail"/>

        <TextView
            android:id="@+id/movieStatusDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieRuntimeDetail"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>